data-app/main/default/objects/Adoption_Event_c_00DDa000001Wc5U__dlm/Adoption_Event_c_00DDa000001Wc5U__dlm.object-meta.xml
<CustomObject>
    <label>Adoption_Event__c_00DDa000001Wc5U</label>
    <mktDataModelAttributes>
        <creationType>Custom</creationType>
        <dataModelTaxonomy>Salesforce_SFDCReferenceModel_0_93</dataModelTaxonomy>
        <isEnabled>true</isEnabled>
        <isSegmentable>false</isSegmentable>
        <isUsedForMetrics>false</isUsedForMetrics>
        <objectCategory>Salesforce_SFDCReferenceModel_0_93.Related</objectCategory>
    </mktDataModelAttributes>
</CustomObject>