data-app/main/default/objects/Adoption_Event_c_00DDa000001Wc5U__dlm/fields/Dog_Capacity_c__c.field-meta.xml
<CustomField>
    <fullName>Dog_Capacity_c__c</fullName>
    <label>Dog Capacity</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>