data-app/main/default/objects/Adoption_Event_c_00DDa000001Wc5U__dlm/fields/End_c__c.field-meta.xml
<CustomField>
    <fullName>End_c__c</fullName>
    <label>End</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>