data-app/main/default/objects/Adoption_Event_c_00DDa000001Wc5U__dlm/fields/Phone_c__c.field-meta.xml
<CustomField>
    <fullName>Phone_c__c</fullName>
    <label>Phone</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Phone</type>
</CustomField>