data-app/main/default/objects/Adoption_Event_c_00DDa000001Wc5U__dlm/fields/Postal_Code_c__c.field-meta.xml
<CustomField>
    <fullName>Postal_Code_c__c</fullName>
    <label>Postal Code</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>